<resources>
    <string translatable="false" name="app_name">Holey Light</string>
    <string translatable="false" name="app_details">Copyright © 2019-2021 – Chainfire\nTwitter: @ChainfireXDA\nSources: github.com/Chainfire/HoleyLight\nTap to visit XDA thread</string>
    <string translatable="false" name="app_website_url">https://forum.xda-developers.com/galaxy-s10/themes/app-holey-light-t3917675</string>
    <string name="permission_required">Permissions needed</string>
    <string name="permission_battery"><![CDATA[In the next dialog, please allow <b>Holey Light</b> to stop optimizing battery usage. This is required to keep the notification animation running.]]></string>
    <string name="permission_associate"><![CDATA[In the next dialog, please link <b>Holey Light</b> with <b>any</b> device. This is required to be able to access notifications colors. It does not seem to matter which device you choose.<br><br>Please <b>turn on Wi-Fi and Bluetooth</b> before continuing; you can turn them off again afterwards.<br><br>If no popup comes up, try making sure <b>Nearby device scanning</b> is enabled, and pairing with a Bluetooth device.]]></string>
    <string name="permission_notifications"><![CDATA[In the next screen, please allow <b>Holey Light</b> notification access. This is required to be able to detect notifications.]]></string>
<string translatable="false" name="permission_accessibility"><![CDATA[In the next screen, please go to <b>Installed services</b>, and enable <b>Holey Light</b>. This is required to show the notification animation. If this doesn\'t work right, try rebooting.]]></string>
    <string name="notification_test_title">Holey Light: Test</string>
    <string name="notification_test_description">Test notification, white LED</string>
    <string translatable="false" name="notification_permissions_title">@string/app_name</string>
    <string name="notification_permissions_description">Some permissions need to be updated. Tap to start.</string>
    <string name="error">Error</string>
    <string name="error_hide_notch"><![CDATA[<b>Holey Light</b> cannot function while the notch is hidden. Uncheck <b>Settings</b> - <b>Display</b> - <b>Full screen apps</b> - <b>Hide front camera</b>.]]></string>
    <string name="error_unsupported_device"><![CDATA[<b>Holey Light</b> does not appear to support your device. If you are using a <b>Samsung/Google</b> device please report this code to the XDA thread:<br><br>[ <b>%s</b> ]]]></string>
<string translatable="false" name="help_basic_title">Help</string>
<string translatable="false" name="help_basic_descrption">Some basic advice</string>
<string translatable="false" name="help_basic_message"><![CDATA[
        <b>Holey Light</b> piggybacks on <b>Always On Display (AOD)</b> (see Android Settings) to show notifications when the screen is off,
        so AOD must be enabled for those modes to work.<br>
        <br>
        AOD\'s <b>Show Always</b>, <b>Tap to show</b> and <b>Show as scheduled</b> modes are all supported. If you\'re not using <b>Tap to show</b>
        mode, it is <i>strongly</i> advised to enable the <b>schedule</b> to turn off AOD while you are sleeping. This may help prevent
        screen burn-in!<br>
        <br>
        While a lot of effort has been put into reducing battery use as much as possible, <b>Holey Light</b> <i>does</i> use additionally battery
        compared to only using <b>AOD</b>.
    ]]></string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="charging_screen_on">Charging: Screen on</string>
    <string name="charging_screen_off">Charging: Screen off</string>
    <string name="battery_screen_on">Battery: Screen on</string>
    <string name="battery_screen_off">Battery: Screen off</string>
<string translatable="false" name="settings_category_operation_title">Operation</string>
<string translatable="false" name="settings_screen_on_title">Screen on</string>
<string translatable="false" name="settings_screen_on_description">Show notification light while the phone is in normal use</string>
    <string translatable="false" name="settings_screen_off_charging_title">@string/charging_screen_off</string>
    <string name="settings_screen_off_charging_description">Show notification light while the screen is off and charging</string>
    <string translatable="false" name="settings_screen_off_battery_title">@string/battery_screen_off</string>
    <string name="settings_screen_off_battery_description">Show notification light while the screen is off and on battery power, consuming additional power</string>
    <string name="settings_lockscreen_on_title">Lockscreen</string>
    <string name="settings_lockscreen_on_description">Show notification light on lockscreen; this may look strange if face unlock is enabled</string>
<string translatable="false" name="settings_category_seen_pickup_title">Mark as seen: Pickup</string>
    <string name="settings_category_seen_pickup_description">Stationary for &gt;10s before moving</string>
    <string translatable="false" name="settings_seen_pickup_screen_on_charging_title">@string/charging_screen_on</string>
    <string name="settings_seen_pickup_screen_on_charging_description">Makes sense when you usually charge your phone where you can see it</string>
    <string translatable="false" name="settings_seen_pickup_screen_off_charging_title">@string/charging_screen_off</string>
    <string name="settings_seen_pickup_screen_off_charging_description">Makes sense when you usually charge your phone where you can see it</string>
    <string translatable="false" name="settings_seen_pickup_screen_on_battery_title">@string/battery_screen_on</string>
    <string name="settings_seen_pickup_screen_on_battery_description">Consumes a little additional power</string>
    <string translatable="false" name="settings_seen_pickup_screen_off_battery_title">@string/battery_screen_off</string>
    <string name="settings_seen_pickup_screen_off_battery_description">Consumes significant additional power</string>
<string translatable="false" name="settings_category_seen_lockscreen_title">Mark as seen: Lockscreen</string>
    <string name="settings_seen_on_lockscreen_title">On lockscreen</string>
    <string name="settings_seen_on_lockscreen_description">Each time the lockscreen is shown</string>
    <string name="settings_seen_on_user_present_title">After unlock</string>
    <string name="settings_seen_on_user_present_description">Each time the lockscreen is unlocked</string>
    <string name="settings_category_animation_title">Animation</string>
    <string name="settings_animation_tune_title">Tune</string>
    <string name="settings_animation_tune_description">Fine-tune size, position, and speed</string>
    <string name="settings_animation_colors_title">Colors</string>
<string translatable="false" name="settings_animation_colors_description">Adjust per-package notification colors (use full black to hide)</string>
<string translatable="false" name="settings_animation_powersave_title">Power saving animation</string>
<string translatable="false" name="settings_animation_powersave_description">Use power saving animation instead of swirl, significantly reduces battery use</string>
<string translatable="false" name="settings_animation_powersave_screen_on_charging">@string/charging_screen_on</string>
<string translatable="false" name="settings_animation_powersave_screen_off_charging">@string/charging_screen_off</string>
<string translatable="false" name="settings_animation_powersave_screen_on_battery">@string/battery_screen_on</string>
<string translatable="false" name="settings_animation_powersave_screen_off_battery">@string/battery_screen_off</string>
    <string translatable="false" name="settings_category_chainfire_title">Chainfire</string>
    <string name="settings_playstore_title">All my apps</string>
    <string name="settings_playstore_description">View all my apps available on Google Play</string>
    <string name="settings_follow_twitter_title">Follow me on Twitter</string>
    <string name="settings_follow_twitter_description">Stay up to date with my developments</string>
    <string name="tune_notice">Changes take a full animation cycle to update!</string>
    <string name="tune_scale_base">Scale base: %.2fdp</string>
    <string name="tune_scale_horizontal">Scale horizontal: %.2fdp</string>
    <string name="tune_shift_vertical">Shift vertical: %.2fdp</string>
    <string name="tune_shift_horizontal">Shift horizontal: %.2fdp</string>
    <string name="tune_speed">Speed: %.1fx</string>
    <string name="reset">Reset</string>
    <string name="refresh">Refresh</string>
<string translatable="false" name="settings_animation_colors_description_v2">Adjust per-channel notification colors (use full black to hide)</string>
<string translatable="false" name="temp_settings_hide_aod_title">Automatic AOD - WORK IN PROGRESS</string>
<string translatable="false" name="temp_settings_hide_aod_description">Requires AOD Helper package. You need to configure an image without a clock on AOD first. Takes control of AOD.</string>
    <string name="translation">Translation by:</string>
    <string name="translation_by"></string>
    <string name="never">Never</string>
    <string name="colors_header_active">Currently active</string>
    <string name="colors_header_inactive">Not currently active</string>
    <string name="colors_help"><![CDATA[<i>Applications</i> can have multiple <i>channels</i>. Each <i>channel</i> is listed individually here. Entries are added only once a new notification is <i>seen</i>. You <b>cannot</b> add entries manually, because <i>channel</i> names can\'t be known beforehand. Set an entry completely <b>black</b> to disable that notification.]]></string>
    <string name="settings_animation_colors_description_v3">Adjust notification color per package and channel</string>
    <string name="permission_accessibility_v2"><![CDATA[In the next screen, please go to <b>Installed services</b>, and enable <b>Holey Light</b>. This is required to be able to show notifications, and be able to tap into AOD. If this doesn\'t work right, try rebooting.]]></string>
    <string translatable="false" name="settings_screen_on_charging_title">@string/charging_screen_on</string>
    <string name="settings_screen_on_charging_description">Show notification light while the screen is on and charging</string>
    <string translatable="false" name="settings_screen_on_battery_title">@string/battery_screen_on</string>
    <string name="settings_screen_on_battery_description">Show notification light while the screen is on and on battery power</string>
    <string name="settings_category_operation_title_v2">When and how to display</string>
    <string name="operation_mode_disabled_title">Disabled</string>
    <string name="operation_mode_disabled_description">Do not show notifications</string>
    <string name="animation_style_swirl_title">Swirl</string>
    <string name="animation_style_blink_title">Blink</string>
    <string name="animation_style_single_title">Pie</string>
    <string name="animation_style_tsp_title">Unholey Light</string>
    <string name="animation_style_location_camera">Camera</string>
    <string name="animation_style_location_screen_center">Screen center</string>
    <string name="animation_style_percentage_up_to">Up to %.1f%% battery/hour</string>
    <string name="animation_style_percentage_below">Below %.0f%% battery/hour</string>
    <string name="settings_category_seen_title">Mark as seen</string>
    <string name="settings_category_seen_description">Treat notifications as dismissed</string>
    <string name="settings_seen_pickup_title">When picked up</string>
    <string translatable="false" name="settings_seen_pickup_description">@string/settings_category_seen_pickup_description</string>
    <string name="settings_seen_on_timeout_track_separately">Track separately</string>
</resources>